kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paprotskyi-deployment-nodejs
  labels:
    app: paprotskyi-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: paprotskyi-nodejs
  template:
    metadata:
      labels:
        app: paprotskyi-nodejs
    spec:
      containers:
      - name: paprotskyi-nodejs
        image: registry.hub.docker.com/igorische/dockerlabv1:1680024240
        resources:
         requests:
          memory: "256M"
          cpu: "100m"
         limits:
          memory: "512M"
          cpu: "100m"
        ports:
        - containerPort: 8080
        readinessProbe:
           httpGet:
             scheme: HTTP
             path: /test
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "ps auxfww | grep node | grep server"
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: paprotskyi-service-nodejs
  labels:
     app: paprotskyi-nodejs
spec:
  type: NodePort
  selector:
    app: paprotskyi-nodejs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
