kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paprotskyi-nginx-ingress-nodejs
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: paprotskyi-nodejs-app
    http:
      paths:       
      - backend:
          service:
            name: paprotskyi-service-nodejs
            port:
              number: 8080
        path: /
        pathType: Prefix
